# bbb-quad

./: .gitignore  .project  LICENSE  README.md  bbb-eth0-net-static.sh  bbb-gpio-all-in-test.py  bbb-packages-install.sh  bbb-packages.sh  bbb-usb0-net-static.sh  beaglebone-gy86-plot.py  checkup.sh  dpkg-size.sh  git-config.sh  git-push-all.sh  gpio-all-out-test.py  gy86  gy86.c  motor-pwm-test.py  motor-pwm-test1.py  motor-pwm-test2.py  pwm-test.py  quadcopter.graphml  select.sh  select.txt
bbb-pins-gui/: bbb_gui.py  bbb_gui.sh  bbb_gui.ui  bbb_main.py
calibration_tool/: .gitignore  acc.txt  magn.txt
devmem-gpio/: .cproject  .project
devmem-gpio/src/: memGPIO.cpp
pidnn/: compilar.sh  xor_train.c
processing/GY86_cube/: GY86_cube.pde
processing/sketch_3d_axis/: sketch_3d_axis.pde
pru-pwm-motor/: .gitignore  bone_pru0_out-00A0.dtbo  build.sh  main.cpp  pru.cpp  pwm-test  pwm.p  quad.txt
quad-bone-gpio-devmem/: .cproject  .project
quad-bone-gpio-devmem/src/: devmem_gpio.cpp  devmem_gpio.h  i2c_bitbang.cpp  i2c_bitbang.h  i2c_bitbang_devmem.cpp  main.cpp
quad-c/: gy86.cpp  main.cpp
quad-calibration/: .gitignore  .project  calibration.h  openimu.bat
quad-cdt/: .cproject  .project
quad-cdt-sync/: .cproject  .project  README.txt
quad-cdt-sync/src/: CMakeLists.txt  README.txt  bbb-adc-test.cpp  bbb-adc.cpp  bbb-adc.h  beaglebone-drone.cpp  cc1101_linux.cpp  cc1101_linux.h  freeimu_linux.cpp  freeimu_linux.h  hmc5883.cpp  i2c_linux.cpp  i2c_linux.h  mpu6050.cpp  mpu6050.h  ms5611.cpp  ms5611.h  murix_kalman.cpp  murix_kalman.h  murix_pid.cpp  murix_pid.h  pru-motor-test.cpp  pru-pwm-cpp.cpp  pru-pwm-fw.asm  udpserver-test.cpp
quad-cdt/src/: CMakeLists.txt  bbb_i2c.cpp  bone_pru0_out-00A0.dts  cc1101_linux.cpp  cc1101_linux.h  freeimu_linux.cpp  freeimu_linux.h  hmc5883.cpp  hmc5883.h  mpu6050-test.cpp  mpu6050.cpp  mpu6050.h  ms5611.h  pru-pwm-cpp.cpp  timestamps.cpp  timestamps.h  udpserver-test.cpp
quad-cpp/: .gitignore  Makefile  gy86.cpp
quad-docs/: .project
quad-easyblack/: .cproject  .project
quad-easyblack/src/: gpio-i2c-test-max-10khz.py  gpio-i2c-test-max-400khz.cpp  memGPIO.cpp
quad-eclipse/: .cproject  .gitignore  .project  CMakeLists.txt  adc.cpp  baro  baro.cpp  bbb-adc.cpp  bbb-gps.cpp  bbb_i2c-test.cpp  bbb_i2c.cpp  bbb_i2c.h  bbb_socat-test.cpp  bbb_socat.cpp  bbb_socat.h  build.sh  cc1101-tap.c  cc1101-tap.cpp  cc1101_linux.cpp  gps.cpp  gy86.cpp  hmc5883-test.cpp  hmc5883.cpp  hmc5883.h  mpu6050-test.cpp  mpu6050.cpp  mpu6050.h  ms5611-test.cpp  ms5611.cpp  ms5611.h  pasm-pwm.p  pru-motor-test.cpp  pru-pwm-cpp.cpp  pru-pwm-cpp.h  pru.cpp  pruPWM.cpp  pwm.p  socket-test.cpp  udpserver-test.cpp  udpserver.cpp  (+1 more)
quad-experimental/: .cproject  .project
quad-experimental/src/: cc1101-test.cpp  hmc5883-test.cpp  pso.cpp
quad-fly/: .cproject  .project  gdbinit.txt
quad-fly/src/: .gitignore  beaglebone-drone.cpp  freeimu_linux.cpp  freeimu_linux.h  hmc5883.cpp  hmc5883.h  mpu6050.cpp  mpu6050.h  ms5611.h  murix_pid.cpp  murix_pid.h  pru-pwm-cpp.cpp  timestamps.cpp  timestamps.h
quad-processing/: .project
quad-processing/GY86_cube/: GY86_cube.pde
quad-pru-fw/: .project  build.sh
quad-python/: .project  bbb-adc.py  bbb-i2c-mpu6050.py  bbb-serial-gps.py  bbb-spi-cc1101.py  i2c-gy86.py  pwm-motors-5-6-7-8.py
quad-scripts/: .project  dpkg-sort-size.sh  hw-version.sh  install-debian-packages.sh  socat_beaglebone.sh
quad-visualstudio/: .gitignore  .project  beaglebone-quadcopter.sln
scripts/: blockdump.sh  install-debian-packages.sh  purge.sh  socat_pc.sh  wifi.sh
(+27 files in other folders)
